syntax = "proto3";
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";

message UserInfo{
  google.protobuf.Timestamp create_at = 1;
  google.protobuf.Timestamp delete_at = 2;

  int64 mobile = 3;
  string password = 4;
  string nickname = 5;
  string email = 6;
  int32 gender = 7;
  int32 role = 8;
  string head_url = 9;

  int64 pass_count = 10;
  int64 submit_count = 11;
}

message SubmitRecord{
  int64 user_id = 1;
  int64 problem_id = 2;
  string code = 3;
  string result = 4;
  string lang = 5;
  google.protobuf.Timestamp submit_time = 6;
}